--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLFuncionariosRegistration.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLFuncionariosRegistration.fxml
@@ -10,12 +10,12 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLFuncionarioRegistrationController">
    <children>
       <VBox fx:id="primaryPane" spacing="25.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css">
       	<children>
       		<Label styleClass="DWORScreenTitleII" text="Cadastro de Funcionarios" />
-            <fx:include source="FXMLFuncionariosForm.fxml" VBox.vgrow="ALWAYS" />
+            <fx:include fx:id="pnFuncionarioForm" source="FXMLFuncionariosForm.fxml" VBox.vgrow="ALWAYS" />
       		<VBox VBox.vgrow="ALWAYS" />
       		<HBox fx:id="pnButtons" alignment="CENTER" spacing="14.0">
       			<children>
