--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLProdutoSearch.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLProdutoSearch.fxml
@@ -36,7 +36,7 @@
             </JFXButton>
          </children>
       </HBox>
-      <TableView fx:id="tviewSearch" prefHeight="140.0" VBox.vgrow="ALWAYS">
+      <TableView fx:id="tviewSearch" onMouseClicked="#actOnTableMouseClicked" prefHeight="140.0" VBox.vgrow="ALWAYS">
          <columns>
             <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="200.0" prefWidth="60.0" text="Id" />
             <TableColumn fx:id="tviewColProductDescription" editable="false" maxWidth="1.7976931348623157E308" minWidth="310.0" prefWidth="-1.0" resizable="false" text="Descrição" />
