--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLLogin.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLLogin.fxml
@@ -4,38 +4,42 @@
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox fx:id="rootPanel" alignment="CENTER" minHeight="300.0" minWidth="480.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.controller.FXMLLoginController">
-	<children>
-		<Label text="Login">
-			<font>
-				<Font name="System Bold" size="30.0" />
-			</font>
-		</Label>
-		<VBox maxHeight="500.0" maxWidth="500.0" spacing="20.0">
-			<children>
-				<JFXTextField fx:id="txtfieldLogin" promptText="Usuário" />
-				<JFXPasswordField fx:id="txtfieldPassword" onAction="#actLogin" promptText="Senha" />
-			</children>
-			<padding>
-				<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-			</padding>
-		</VBox>
-		<HBox alignment="CENTER" spacing="15.0" VBox.vgrow="NEVER">
-			<children>
-				<JFXButton fx:id="btnLogin" buttonType="RAISED" onAction="#actLogin" prefHeight="40.0" prefWidth="100.0" ripplerFill="BLACK" style="-fx-background-color: CadetBlue;" text="Login" textFill="WHITE" />
-				<JFXButton fx:id="btnCancel" buttonType="RAISED" onAction="#actCancel" prefHeight="40.0" prefWidth="100.0" ripplerFill="BLACK" style="-fx-background-color: CadetBlue;" text="Cancelar" textFill="WHITE" />
-			</children>
-			<padding>
-				<Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-			</padding>
-		</HBox>
-	</children>
-	<padding>
-		<Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-	</padding>
-</VBox>
+<StackPane fx:id="rootPanel" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.FXMLLoginController">
+   <children>
+      <VBox alignment="CENTER" minHeight="300.0" minWidth="480.0" styleClass="DWORDefaultFormBackground" stylesheets="@FXMLStylesheet.css">
+      	<children>
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../resources/maple-bear-alphaville-original.png" />
+               </image></ImageView>
+      		<VBox maxHeight="500.0" maxWidth="500.0" spacing="20.0">
+      			<children>
+      				<JFXTextField fx:id="txtfieldLogin" promptText="Usuário" />
+      				<JFXPasswordField fx:id="txtfieldPassword" onAction="#actLogin" promptText="Senha" />
+      			</children>
+      			<padding>
+      				<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+      			</padding>
+      		</VBox>
+      		<HBox alignment="CENTER" spacing="15.0" VBox.vgrow="NEVER">
+      			<children>
+      				<JFXButton fx:id="btnLogin" buttonType="RAISED" onAction="#actLogin" prefHeight="40.0" prefWidth="100.0" ripplerFill="BLACK" style="-fx-background-color: CadetBlue;" text="Login" textFill="WHITE" />
+      				<JFXButton fx:id="btnCancel" buttonType="RAISED" onAction="#actCancel" prefHeight="40.0" prefWidth="100.0" ripplerFill="BLACK" style="-fx-background-color: CadetBlue;" text="Cancelar" textFill="WHITE" />
+      			</children>
+      			<padding>
+      				<Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+      			</padding>
+      		</HBox>
+      	</children>
+      	<padding>
+      		<Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+      	</padding>
+      </VBox>
+   </children>
+</StackPane>
