--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLAlocarProdutoSearch.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLAlocarProdutoSearch.fxml
@@ -14,7 +14,7 @@
 
 <VBox fx:id="rootPane" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label styleClass="DWORScreenTitleII" text="Busca de Produtos" />
+      <Label styleClass="DWORScreenTitleII" text="Busca de Emprestimos" />
       <HBox alignment="CENTER" spacing="15.0">
          <children>
             <JFXTextField fx:id="tfieldSearch" labelFloat="true" onAction="#actSPSearch" prefHeight="30.0" promptText="Insira o termo de busca" HBox.hgrow="ALWAYS">
