--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLBuscaEmprestimo.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLBuscaEmprestimo.fxml
@@ -13,11 +13,12 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLFornecedorSearchController">
+
+<StackPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.component.FXMLBuscaEmprestimoController">
    <children>
       <VBox minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css">
          <children>
-            <Label styleClass="DWORScreenTitleII" text="Busca de Fornecedor" />
+            <Label styleClass="DWORScreenTitleII" text="Busca de Emprestimo" />
             <HBox alignment="CENTER" spacing="15.0">
                <children>
                   <JFXTextField fx:id="tfieldSearch" labelFloat="true" onAction="#actSPSearch" prefHeight="30.0" promptText="Insira o termo de busca" HBox.hgrow="ALWAYS">
@@ -39,9 +40,12 @@
                   </JFXButton>
                </children>
             </HBox>
-            <TableView fx:id="tviewSearch" onMouseClicked="#actOnTableMouseClicked" prefHeight="200.0" VBox.vgrow="ALWAYS">
+            <TableView fx:id="tviewSearch" prefHeight="200.0" VBox.vgrow="ALWAYS">
                <columns>
-                  <TableColumn fx:id="tviewColID" editable="false" maxWidth="661.0" minWidth="200.0" prefWidth="661.0" text="Forrnecedor" />
+                  <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="50.0" prefWidth="20.0" resizable="false" text="ID" />
+                  <TableColumn fx:id="tviewColDescription" editable="false" maxWidth="1.7976931348623157E308" minWidth="237.0" prefWidth="326.0" resizable="false" text="Funcionario" />
+               	<TableColumn fx:id="tviewColdata" maxWidth="258.0" minWidth="126.0" prefWidth="142.0" resizable="false" text="Data Emprestimo" />
+                  <TableColumn fx:id="tviewColValortotal" maxWidth="258.0" minWidth="118.0" prefWidth="143.0" resizable="false" text="Sala" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
