--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLFuncionariosSearch.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLFuncionariosSearch.fxml
@@ -39,7 +39,7 @@
                   </JFXButton>
                </children>
             </HBox>
-            <TableView fx:id="tviewSearch" prefHeight="200.0" VBox.vgrow="ALWAYS">
+            <TableView fx:id="tviewSearch" onMouseClicked="#actOnTableMouseClicked" prefHeight="200.0" VBox.vgrow="ALWAYS">
                <columns>
                   <TableColumn fx:id="tviewColID" editable="false" maxWidth="-1.0" minWidth="200.0" prefWidth="-1.0" text="Nome" />
                   <TableColumn fx:id="tviewFunc" editable="false" maxWidth="-1.0" minWidth="200.0" prefWidth="-1.0" text="Função" />
